# python-poetry-mkdocs-template

./: .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build_and_test.yml
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  README.md
search/: search_index.json
tests/: __init__.py
