[tool.poetry]
authors = ["Brooks YUAN <hktkzyx@yeah.net>"]
classifiers = [
  "License :: OSI Approved",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Programming Language :: Python",
]
description = "A template repository for python using poetry and mkdocs."
documentation = "https://hktkzyx.github.io/python-poetry-mkdocs-template/"
homepage = "https://hktkzyx.github.io/python-poetry-mkdocs-template/"
keywords = ["template", "poetry", "mkdocs"]
license = "MulanPSL-2.0"
name = "python-poetry-mkdocs-template"
readme = "docs/README.md"
repository = "https://github.com/hktkzyx/python-poetry-mkdocs-template"
version = "1.0.0"

[tool.poetry.dependencies]
mike = {version = "^1.1.2", optional = true}
mkdocs-material = {version = "^8.2.15", optional = true}
mkdocstrings-python-legacy = {version = "^0.2.2", optional = true}
pytest = {version = "^7.1.2", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
python = "^3.9"

[tool.poetry.dev-dependencies]
commitizen = "^2.27.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
yapf = ">=0.32.0, <1.0.0"

[tool.poetry.extras]
docs = ["mike", "mkdocs-material", "mkdocstrings-python-legacy"]
test = ["pytest", "pytest-cov"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "1.0.0"
version_files = ["pyproject.toml:version"]

[tool.yapf]
based_on_style = "pep8"
indent_dictionary_value = true
split_all_top_level_comma_separated_values = true
split_before_arithmetic_operator = true
split_before_named_assigns = false

[tool.isort]
profile = "google"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "python_poetry_mkdocs_template"]

[tool.coverage.run]
source_pkgs = ["python_poetry_mkdocs_template"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
